# service_utd

./: CMakeLists.txt  CascadeDiagonal.xml  CascadeHorizontal.xml  CascadeVertical.xml  README.md  dasgrid.yml  fourquads.rviz  matlabmap.yml  package.xml  squaremap.yml  squaremap3.yml  squaremapbig.yml
ardrone_blob/: mainpage.dox  manifest.xml
ardrone_blob/nodes/: ardrone_blob.py
ardrone_control/: manifest.xml
ardrone_control/nodes/: ardrone_blob.py  ardrone_color_control.py  ardrone_control.py  joy2drone.py
launch/: brickwall_search.launch  brickwall_simulation.launch  labsearchsim.launch  labstart_gazebo.launch  multiuav_search.launch  quadrotor_empty_world.launch  search_simulation.launch  service_world.launch  spawn_quadrotor.launch  spawn_quadrotor_with_downward_cam.launch  spawn_two_quadrotors.launch  start_gazebo.launch  targetsearch.launch  training_simulation.launch  two_ardrones.launch  urban_search_sim_multiuav.launch  urban_search_sim_multiuav_batch.launch  urban_search_sim_multiuav_batch.launch.bak  urban_search_sim_multiuav_city.launch  urban_search_sim_swarm.launch  urban_search_simulation.launch  urban_search_simulation_batch.launch  urban_search_simulation_city.launch  urbansearch2agents.launch  urbansearch4agents.launch  urbansearch6agents.launch
meshes/: pioneer.blend  pioneer.dae  quadrotor_base.dae
msg/: Markers.msg  ParticleSet.msg  ProbMap.msg  README  SoftMeasure.msg
scripts/: fullsimsauro.sh  groundobs.py  joy2drone.py  montecarlo.sh  pioneerlaunch  randvertex.py  simrandom.sh  simscript.sh
src/: CarDetector.h  cardetector.cpp  clockserver.cpp  colortarget.cpp  colortarget.h  detecttarget.cpp  detecttarget.h  drone_odom.cpp  drone_setpoint.cpp  drone_waypoint_nav.cpp  fakedetector.cpp  fakedrone.cpp  fakerover.cpp  grid2image.m  groundsensors.cpp  infocontroller.cpp  inh_particlefilter.cpp  inh_particlefilter.hpp  joy2drone.py  loadgrids.m  particlefilter.cpp  particlefilter.h  pathplanner.cpp  ros2matlab.cpp  rover_controller.cpp  targetdetector.cpp  targetdetector.cpp.autosave  targetstateestimator.cpp  targetstateestimator.h  tf2posestamped.cpp  traindetector.cpp  ugvcontroller.py  unittest.cpp  urbanmap.cpp  urbanmap.hpp  vispose_singleframe.cpp  vistarget.cpp  xml2octave.cpp
urdf/: quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro
visual_pose/: CMakeLists.txt  mainpage.dox  manifest.xml
visual_pose/src/: colorpose.cpp  vispose.cpp  vistarget.cpp  vistarget.h
worlds/: service.world  servicebatch.world  servicecity.world
